# software-development-handbook

./: .gitignore  .readthedocs.yml  CLAUDE.md  LICENSE.md  README.md  pyproject.toml  setup.cfg
.github/workflows/: lint.yml  spellcheck.yml
cookiecutter-django/: cookiecutter.json
cookiecutter-django/hooks/: post_gen_project.py
cookiecutter-django/{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  Dockerfile_django  Dockerfile_static  LICENSE  README.rst  default.conf  manage.py  pyproject.toml  requirements.in  requirements.txt  requirements_base.in  requirements_base.txt  requirements_dev.in  requirements_dev.txt
cookiecutter-django/{{cookiecutter.project_slug}}/.github/workflows/: automerge.yml  ci.yml  docker.yml  i18n.yml  lint.yml
cookiecutter-django/{{cookiecutter.project_slug}}/core/: context_processors.py  settings.py  urls.py
cookiecutter-django/{{cookiecutter.project_slug}}/docs/: conf.py  index.rst  requirements.txt
cookiecutter-pypackage/: cookiecutter.json
cookiecutter-pypackage/{{cookiecutter.repository_name}}/: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py
cookiecutter-pypackage/{{cookiecutter.repository_name}}/.github/workflows/: ci.yml  lint.yml  pypi.yml
cookiecutter-pypackage/{{cookiecutter.repository_name}}/docs/: changelog.rst  conf.py  index.rst  requirements.txt
docs/: conf.py  contributing.rst  index.rst  requirements.txt
docs/agents/: claude-code.rst  index.rst
docs/agents/examples/: building-a-style-guide.rst
docs/docker/: build.rst  django.rst  dockerfile.rst  dockerignore.rst  index.rst
docs/docker/samples/: Dockerfile_django  Dockerfile_python  ci.yml  default.conf  docker.yml
docs/general/: api.rst  architecture.rst  code.rst  documentation.rst  index.rst  license.rst  preferences.rst
docs/git/: index.rst
docs/github/: developers.rst  index.rst  maintainers.rst  reference.rst  standards.rst  users.rst
docs/htmlcss/: index.rst
docs/http/: index.rst
docs/javascript/: index.rst
docs/javascript/samples/: js.yml  lint.yml
docs/learning/: index.rst
docs/python/: a11y.rst  applications.rst  ci.rst  code.rst  continuous-integration.rst  django.rst  documentation.rst  file_formats.rst  i18n.rst  index.rst  layout.rst  linting.rst  logging.rst  packages.rst  performance.rst  preferences.rst  preferred_packages.rst  quality.rst  requirements.rst  services.rst  settings.py  settings.rst  style_guide.rst  tests.rst
docs/python/samples/: ci-app.yml  ci-package-tox.yml  ci-package.yml  i18n-babel.yml  i18n-django.yml  i18n-sphinx-theme.yml  lint.yml  log.py  logging.py  pyproject-ruff.toml  settings.py  setup.py
docs/python/samples/ci/: app.yml  django.yml  package-tox.yml  package.yml  static.yml
docs/python/samples/i18n/: babel.yml  django.yml
docs/roadmap/: index.rst
docs/rust/: index.rst
docs/rust/samples/: ci.yml
docs/services/: admin.rst  index.rst  postgresql.rst  rabbitmq.rst
docs/shell/: index.rst
docs/shell/samples/: lint.yml  shell.yml
docs/sql/: index.rst
