[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.0.0"

[tool.ruff]
line-length = 119
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN", "COM", "EM",
  # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  "W191", "D206", "Q000", "Q001", "Q002", "Q003", "ISC001",
  "D203", "D212",  # ignore incompatible rules
  "D200", "D205",  # documentation preferences
  "C901", "PLR091",  # complexity preferences
  "ARG001", "ARG002", "DJ008", "RUF012", "SLF001",  # Django
]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["copyright"]

[tool.ruff.lint.per-file-ignores]
"docs/conf.py" = ["INP001"]  # no __init__.py file
"*/management/commands/*" = ["INP001"]  # no __init__.py file
"*/migrations/*" = ["E501"]
"tests/*" = [
  "D",  # docstring
  "ARG001",  # pytest fixtures
  "PLR0913",  # Too many arguments
  "PLR2004",  # Magic value used
  "PT",  # Django
  "S101",  # assert
]

[tool.coverage.run]
omit = ['*/migrations/*']
